--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--My places-->
         <scene sceneID="7WB-z0-uMW">
             <objects>
                 <tableViewController id="XUy-Ja-Ta3" customClass="ViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,7 @@
                             <outlet property="delegate" destination="XUy-Ja-Ta3" id="B7I-g8-vqu"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="Aba-We-TXm"/>
+                    <navigationItem key="navigationItem" title="My places" id="Aba-We-TXm"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zt9-wZ-BFD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -44,6 +44,12 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="bFT-zh-9oL">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="SnellRoundhand-Bold" family="Snell Roundhand" pointSize="24"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" name="SnellRoundhand-Bold" family="Snell Roundhand" pointSize="1"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
